force-app/main/default/objects/Tarea__c/fields/completado__c.field-meta.xml
<CustomField>
    <fullName>completado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marcar si la tarea se realizo</description>
    <label>Completado</label>
    <type>Checkbox</type>
</CustomField>