force-app/main/default/objects/Tarea__c/fields/descripcion__c.field-meta.xml
<CustomField>
    <fullName>descripcion__c</fullName>
    <description>Descripcion de la tarea a realizar</description>
    <label>Descripcion</label>
    <type>TextArea</type>
</CustomField>