force-app/main/default/objects/Tarea__c/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <description>id incremental que se asigna a cada tarea</description>
    <label>id</label>
    <type>AutoNumber</type>
</CustomField>