force-app/main/default/objects/Tarea__c/fields/titulo__c.field-meta.xml
<CustomField>
    <fullName>titulo__c</fullName>
    <label>Titulo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>